Add search function

--- a/src/app/search-movie/search-movie.component.html
+++ b/src/app/search-movie/search-movie.component.html
@@ -5,11 +5,10 @@
       <p class="mt-1 text-4xl font-extrabold text-gray-900 sm:text-5xl sm:tracking-tight lg:text-6xl">The Movie Database - Angular App</p>
         <form action="#" class="mt-12 sm:mx-auto sm:max-w-lg sm:flex">
             <div class="min-w-0 flex-1">
-              <label for="cta_email" class="sr-only">Email address</label>
-              <input id="cta_email" type="email" class="block w-full border border-black rounded-md px-5 py-3 text-base text-gray-900 placeholder-gray-500 shadow-sm focus:outline-none focus:border-transparent focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-indigo-600" placeholder="Enter your email">
+              <input id="cta_email" type="email" class="block w-full border border-black rounded-md px-5 py-3 text-base text-gray-900 placeholder-gray-500 shadow-sm focus:outline-none focus:border-transparent focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-indigo-600" placeholder="Search">
             </div>
             <div class="mt-4 sm:mt-0 sm:ml-3">
-              <button type="submit" class="block w-full rounded-md border border-transparent px-5 py-3 bg-indigo-500 text-base font-medium text-white shadow hover:bg-indigo-400 focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-indigo-600 sm:px-10">Notify me</button>
+              <button type="submit" class="block w-full rounded-md border border-transparent px-5 py-3 bg-indigo-500 text-base font-medium text-white shadow hover:bg-indigo-400 focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-indigo-600 sm:px-10">Search</button>
             </div>
           </form>
     </div>
