--- a/src/app/movie-list/movie-list.component.html
+++ b/src/app/movie-list/movie-list.component.html
@@ -1,5 +1,5 @@
 <div  class="m-20 px-20 text-center">
-  <h1  class="m-4 text-3xl font-extrabold text-gray-900 sm:text-4xl sm:tracking-tight lg:text-6xl">Top 20 Movies</h1>
+  <h1  class="m-4 text-3xl font-extrabold text-red-900 sm:text-4xl sm:tracking-tight lg:text-6xl">Top 20 Movies</h1>
   <div  class="grid grid-cols-1 gap-4 sm:grid-cols-2">
     <div *ngFor="let movie of movies" class="relative rounded-lg border border-gray-300 bg-white px-6 py-5 shadow-sm flex items-center space-x-3 hover:border-gray-400 focus-within:ring-2 focus-within:ring-offset-2 focus-within:ring-indigo-500">
       <div class="flex-shrink-0">
@@ -8,7 +8,7 @@
       <div class="flex-1 min-w-0">
         <a href="#" class="focus:outline-none">
           <span class="absolute inset-0" aria-hidden="true"></span>
-          <p class="text-sm font-medium text-gray-900">
+          <p class="text-sm font-medium  text-gray-900">
             {{movie.title}}
           </p>
           <p class="text-sm text-gray-500 truncate">
