Add new component and Search Function

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,5 +5,6 @@
   </a>
 </section>
 <div id="comp-render" *ngIf="display">
+  <router-outlet></router-outlet>
 <app-movie-list></app-movie-list>
 </div>
