--- a/src/app/search-movie/search-movie.component.html
+++ b/src/app/search-movie/search-movie.component.html
@@ -53,5 +53,7 @@
 </div>
 
   <div id="comp-render" *ngIf="display">
+    <router-outlet></router-outlet>
   <app-movie-list></app-movie-list>
+
   </div>
