--- a/src/app/search-movie/search-movie.component.html
+++ b/src/app/search-movie/search-movie.component.html
@@ -3,57 +3,64 @@
   <div class="max-w-7xl mx-auto py-16 px-4 sm:py-10 sm:px-6 lg:px-8">
     <div class="text-center">
       <p
-        class="mt-1 text-4xl font-extrabold text-gray-900 sm:text-5xl sm:tracking-tight lg:text-6xl"
+        class="
+          mt-1
+          text-4xl
+          font-extrabold
+          text-gray-900
+          sm:text-5xl
+          sm:tracking-tight
+          lg:text-6xl
+        "
       >
         The Movie Database - Angular App
       </p>
-      <br>
-      <section class="mx-auto text-center align-middle text-2xl font-bold underline">
-  <a href="#" (click)="onPress()">
-    Top 20 Movies Right Now
-  </a>
-</section>
-<form
-        action="#"
-        class="mt-12 sm:mx-auto sm:max-w-lg sm:flex"
-        >
+      <br />
+      <section
+        class="mx-auto text-center align-middle text-2xl font-bold underline"
+      >
+        <a href="#" (click)="onPress()"> Top 20 Movies Right Now </a>
+      </section>
+      <form action="#" class="mt-12 sm:mx-auto sm:max-w-lg sm:flex">
         <div
-        class="w-full h-10 pl-3 pr-2 bg-white border rounded-full flex justify-between items-center relative"
+          class="
+            w-full
+            h-10
+            pl-3
+            pr-2
+            bg-white
+            border
+            rounded-full
+            flex
+            justify-between
+            items-center
+            relative
+          "
         >
-        <input
-        (keyup)="search($event)"
-        type="text"
-        value=""
-        name="search"
-        id="search"
-        placeholder="Search"
-        class="appearance-none w-full outline-none focus:outline-none active:outline-none"
-        />
-        <button
-        (click)="search($event)"
-        type="submit"
-        class="ml-1 outline-none focus:outline-none active:outline-none"
-        >
-        <svg
-        fill="none"
-              stroke="currentColor"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              viewBox="0 0 24 24"
-              class="w-6 h-6"
-              >
-              <path d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
-            </svg>
-          </button>
+          <input
+            (keyup.enter)="search($event)"
+            (keyup)="search($event)"
+            type="text"
+            name="search"
+            id="search"
+            placeholder="Write something to search. Actor, Movie or TV show"
+            class="
+              appearance-none
+              w-full
+              outline-none
+              focus:outline-none
+              active:outline-none
+            "
+          />
         </div>
       </form>
+      <div *ngFor="let result of results">
+        <h3 *ngIf="result.media_type === 'movie'">{{ result.title }} Movie</h3>
+        <h3 *ngIf="result.media_type === 'person'">{{ result.name }} Actor</h3>
+      </div>
     </div>
   </div>
 </div>
 
-  <div id="comp-render" *ngIf="display">
-    <router-outlet></router-outlet>
-  <app-movie-list></app-movie-list>
-
-  </div>
+<router-outlet></router-outlet>
+<app-movie-list *ngIf="display"></app-movie-list>
